# skills

./: README.md
ab-test-setup/: SKILL.md
ad-creative/: SKILL.md
ai-seo/: SKILL.md
analytics-tracking/: SKILL.md
brainstorming/: SKILL.md
churn-prevention/: SKILL.md
cold-email/: SKILL.md
competitor-alternatives/: SKILL.md
context-compression/: SKILL.md
context-fundamentals/: SKILL.md
copy-editing/: SKILL.md
copywriting/: SKILL.md
deep-research/: SKILL.md
email-sequence/: SKILL.md
evaluation/: SKILL.md
form-cro/: SKILL.md
free-tool-strategy/: SKILL.md
json-canvas/: SKILL.md
launch-strategy/: SKILL.md
lead-magnets/: SKILL.md
marketing-ideas/: SKILL.md
marketing-psychology/: SKILL.md
memory-best-practices/: SKILL.md
multi-agent-patterns/: SKILL.md
onboarding-cro/: SKILL.md
page-cro/: SKILL.md
paid-ads/: SKILL.md
paywall-upgrade-cro/: SKILL.md
plan-writing/: SKILL.md
popup-cro/: SKILL.md
pricing-strategy/: SKILL.md
product-marketing-context/: SKILL.md
programmatic-seo/: SKILL.md
referral-program/: SKILL.md
revops/: SKILL.md
sales-enablement/: SKILL.md
schema-markup/: SKILL.md
seo-audit/: SKILL.md
seo-competitor-pages/: SKILL.md
seo-content/: SKILL.md
seo-crawler/: Cargo.toml  SKILL.md  build.sh
seo-crawler/src/: extract.rs  main.rs  robots.rs  sitemap.rs
seo-geo/: SKILL.md
seo-hreflang/: SKILL.md
seo-images/: SKILL.md
seo-plan/: SKILL.md
seo-programmatic/: SKILL.md
seo-schema/: SKILL.md
seo-sitemap/: SKILL.md
seo-technical/: SKILL.md
signup-flow-cro/: SKILL.md
site-architecture/: SKILL.md
social-content/: SKILL.md
spec-writing/: SKILL.md
systematic-debugging/: SKILL.md
tdd/: SKILL.md
verification/: SKILL.md
web-scraper/: Cargo.toml  SKILL.md  build.sh
web-scraper/scripts/: web-differ
web-scraper/src/: main.rs
x-manager/: Cargo.toml  SKILL.md  build.sh
x-manager/scripts/: x-manager
x-manager/src/: api.rs  auth.rs  commands.rs  main.rs
