[package]
name = "seo-crawler"
version = "1.0.0"
edition = "2021"
description = "Fast, polite website crawler for SEO analysis"

[[bin]]
name = "seo-crawler"
path = "src/main.rs"

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
# HTML parsing
scraper = "0.22"
# URL handling
url = "2"
# Async runtime
tokio = { version = "1", features = ["full"] }
# CLI args
clap = { version = "4", features = ["derive"] }
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# XML parsing (sitemaps)
quick-xml = { version = "0.37", features = ["serialize"] }
# Robots.txt
texting_robots = "0.2"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
