[package]
name = "web-differ"
version = "1.0.0"
edition = "2021"
description = "Scrape web pages, cache content, detect changes between scrapes"

[[bin]]
name = "web-differ"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"], default-features = false }
scraper = "0.22"
url = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
