[package]
name = "x-manager"
version = "1.0.0"
edition = "2021"
description = "X/Twitter account manager — post, read, search, monitor, engage"

[[bin]]
name = "x-manager"
path = "src/main.rs"

[dependencies]
# HTTP + OAuth
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart"], default-features = false }
# OAuth 1.0a signing
oauth1-request = "0.6"
hmac = "0.12"
sha1 = "0.10"
# CLI
clap = { version = "4", features = ["derive"] }
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async
tokio = { version = "1", features = ["full"] }
# Error handling
anyhow = "1"
# Crypto for credential encryption
aes-gcm = "0.10"
# Base64
base64 = "0.22"
# Random
rand = "0.8"
# Time
chrono = { version = "0.4", features = ["serde"] }
# URL encoding
urlencoding = "2"
# UUID
uuid = { version = "1", features = ["v4"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Home dir
dirs = "6"
# Hostname
hostname = "0.4"
# SHA256 for key derivation
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
